k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-corp-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-corp-app
  template:
    metadata:
      labels:
        app: eks-corp-app
    spec:
      serviceAccountName: eks-corp-app
      containers:
        - name: eks-corp-app
          image: 554422868760.dkr.ecr.eu-central-1.amazonaws.com/tomi-eks-corp-platform-app:v1
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
