k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-corp-app
  namespace: default
spec:
  selector:
    app: eks-corp-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
